--- a/backend/gurugasspoint/templates/customers/editcustomer.html
+++ b/backend/gurugasspoint/templates/customers/editcustomer.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'customer/base.html' %}
 {% block content %}
 <form action="" method="post" enctype="multipart/form-data" autocomplete="off">
-    <h1>Add Products Here </h1>
+    <h1>Edit customer Profile </h1>
     {% csrf_token %}
     {{form}}
     <button type="submit">Save </button>
