--- a/backend/gurugasspoint/templates/products/addproducts.html
+++ b/backend/gurugasspoint/templates/products/addproducts.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'products/base.html' %}
 {% block content %}
 <form action="" method="post" enctype="multipart/form-data" autocomplete="off">
     <h1>Add Products Here </h1>
