--- a/backend/gurugasspoint/templates/customers/editcustomer.html
+++ b/backend/gurugasspoint/templates/customers/editcustomer.html
@@ -1,4 +1,4 @@
-{% extends 'customer/base.html' %}
+{% extends 'customers/base.html' %}
 {% block content %}
 <form action="" method="post" enctype="multipart/form-data" autocomplete="off">
     <h1>Edit customer Profile </h1>
