--- a/backend/gurugasspoint/templates/products/allproducts.html
+++ b/backend/gurugasspoint/templates/products/allproducts.html
@@ -11,6 +11,7 @@
             <th>Price</th>
             <th>Units</th>
             <th>Serial Number</th>
+            <th>Image</th>
             <th>Actions</th>
         </tr>
 
@@ -23,6 +24,7 @@
             <td>{{ product.price }}</td>
             <td>{{ product.units }}</td>
             <td>{{ product.serial_number }}</td>
+            <td>{{ product_image}}</td>
             <td>
                 <a href="{% url 'product_update' product.id %}">Edit </a>
                 
