--- a/backend/gurugasspoint/templates/products/base.html
+++ b/backend/gurugasspoint/templates/products/base.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     {% block title %}<title>Guru-Gas</title>{% endblock %}
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href={% 'stingo.css' %}>
     <script src='main.js'></script>
+
+    
 </head>
 <body>
    {% block content %}
