--- a/backend/members/templates/login/loginform.html
+++ b/backend/members/templates/login/loginform.html
@@ -1,15 +1,14 @@
 {% extends 'login/base.html' %}
 {% block content %}
-<form action="" method="post" enctype="multipart/form-data" autocomplete="off">
-    <h1>Login </h1>
+<h1>login form  page</h1>
+<form action="" method="post">
     {% csrf_token %}
     <label for="">username</label>
     <input type="text" name="username">
     <br>
     <label for="">password</label>
-    <input type="password" name="password">
+    <input type="text" name="password">
     <br>
-    
-    <button type="submit">login </button>    
+    <button type="submit">login</button>
 </form>
 {% endblock %}
