--- a/backend/gurugasspoint/templates/products/addproducts.html
+++ b/backend/gurugasspoint/templates/products/addproducts.html
@@ -4,7 +4,7 @@
     <h1>Add Products Here </h1>
     {% csrf_token %}
     {{form}}
-    <button type="submit">Save </button>
+    <button type="submit" class="text-sm color-white-400">Save </button>
     
 </form>
 {% endblock %}
