--- a/backend/gurugasspoint/templates/users/allusers.html
+++ b/backend/gurugasspoint/templates/users/allusers.html
@@ -2,7 +2,7 @@
 {% block title %} All System Users {% endblock %}
 
 {% block content %}
-<h1>All users</h1>
+<h1 class="text-2xl align-items: center;">All users</h1>
 <table>
     <thead>
         <tr>
