--- a/backend/gurugasspoint/templates/users/base.html
+++ b/backend/gurugasspoint/templates/users/base.html
@@ -5,11 +5,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     {% block title %}<title>Guru-Gas</title>{% endblock %}
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src='main.js'></script>
 </head>
 
-<body>
+<body class="bg-blue-100">
    {% block content %}
    {% endblock %}
 </body>
