CART NA IMAGES IKO FITI SAI NIMEIFANYA SAATISA USIKU

--- a/backend/gurugasspoint/templates/products/base.html
+++ b/backend/gurugasspoint/templates/products/base.html
@@ -9,6 +9,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src='main.js'></script>
 </head>
+<nav>
+    <a href="#">Home</a>
+    <a href="">Cart</a>
+    <a href="">Login</a>
+</nav>
 <body class="bg-blue-100">
    {% block content %}
    {% endblock %}
