--- a/backend/gurugasspoint/templates/cart/base.html
+++ b/backend/gurugasspoint/templates/cart/base.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
+    {% load static %}
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     {% block title %}<title>Guru-Gas</title>{% endblock %}
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src='main.js'></script>
 </head>
-<body>
+<nav>
+    <a href="#">Home</a>
+    <a href="">Cart</a>
+    <a href="">Login</a>
+</nav>
+<body class="bg-blue-100">
    {% block content %}
    {% endblock %}
 </body>
