--- a/backend/gurugasspoint/templates/products/allproducts.html
+++ b/backend/gurugasspoint/templates/products/allproducts.html
@@ -16,17 +16,9 @@
         <div class="border rounded-lg shadow-md bg-white overflow-hidden">
 
             <!-- Image -->
-            {% if product.image %}
-            <img
-                src="{{ product.image.url }}"
-                alt="{{ product.product_name }}"
-                class="w-full h-48 object-cover"
-            />
-            {% else %}
-            <div class="w-full h-48 bg-gray-200 flex items-center justify-center">
-                <span class="text-gray-500">No Image</span>
-            </div>
-            {% endif %}
+         
+            <img src="{{product.product_image.url}}"
+             alt="{{product.product_name}}">            
 
             <!-- Product Details -->
             <div class="p-4">
@@ -35,6 +27,7 @@
                 </h2>
 
                 <div class="text-sm text-gray-700 space-y-1">
+                    
                     <p><span class="font-semibold">Weight:</span> {{ product.weight }}</p>
                     <p><span class="font-semibold">Price:</span> {{ product.price }}</p>
                     <p><span class="font-semibold">Units:</span> {{ product.units }}</p>
