Nimestyle, but still navigation hazifanyi

--- a/backend/gurugasspoint/templates/cart/base.html
+++ b/backend/gurugasspoint/templates/cart/base.html
@@ -7,10 +7,10 @@
     {% block title %}<title>Guru-Gas</title>{% endblock %}
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src='main.js'></script>
+    <!-- <script src='main.js'></script> -->
 </head>
 <nav>
-    <a href="#">Home</a>
+    <a href="#/">Home</a>
     <a href="">Cart</a>
     <a href="">Login</a>
 </nav>
