--- a/backend/gurugasspoint/templates/products/base.html
+++ b/backend/gurugasspoint/templates/products/base.html
@@ -14,7 +14,7 @@
 
     <!-- NAVBAR -->
     <nav class="bg-blue-200 px-4 py-3 flex gap-6">
-        <a href="#/" class="font-semibold">Home</a>
+        <a href="#home" class="font-semibold">Home</a>
         <a href="#Cart">Cart</a>
         <a href="#">Login</a>
     </nav>
