nimeweka kadrop down kaprofile ka customer

--- a/backend/gurugasspoint/templates/customers/base.html
+++ b/backend/gurugasspoint/templates/customers/base.html
@@ -16,7 +16,8 @@
     <nav class="bg-blue-200 px-4 py-3 flex gap-6">
         <a href="{% url 'product_list' %}" class="font-semibold">Home</a>
         <a href="{% url 'cart_detail' %}">Cart</a>
-        <a href="{% url 'profile_create' %}">Profile</a>
+        <a href="{% url 'logincustomer' %}">Login</a>
+        <a href="{% url 'product_list' %}">Logout</a>
     </nav>
 
     <!-- PAGE CONTENT -->
