--- a/backend/gurugasspoint/templates/customers/login.html
+++ b/backend/gurugasspoint/templates/customers/login.html
@@ -3,13 +3,16 @@
 <form action="" method="post" autocomplete="off">
     {% csrf_token %}
     <h1>LOGIN FORM</h1>
-    <label for="">Username</label>
-    <input type="text" name="username">
+    <label for="username">Username</label>
+    <input type="text" name="username" id="username" required>
     <br>
-    <label for="">Password</label>
-    <input type="text" name="password">
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" required>
     <br>
     <button type="submit">Login</button>
 
+    {% if msg %}
+    <p style="color:red;">{{ msg }}</p>
+    {% endif %}
 </form>
 {% endblock %}
