--- a/backend/gurugasspoint/templates/customers/myprofile.html
+++ b/backend/gurugasspoint/templates/customers/myprofile.html
@@ -1,9 +1,11 @@
 {% extends 'products/base.html' %}
 {% block content %}
 <form action="" method="post" enctype="multipart/form-data" autocomplete="off">
-    <h1>Edit your Profile </h1>
+    <h1>Manage Profile </h1>
     {% csrf_token %}
     {{form}}
-    <button type="submit">Save </button>    
+    <button type="submit">Edit</button>
+    <button type="submit">Delete</button>
+    
 </form>
 {% endblock %}
