--- a/backend/gurugasspoint/templates/cart/checkout_success.html
+++ b/backend/gurugasspoint/templates/cart/checkout_success.html
@@ -1,16 +1,16 @@
 {% extends 'products/base.html' %}
 {% block content %}
-<h2>Order Successful!</h2>
-<p>Your order ID is {{ order.id }}.</p>
-<p>Total: {{ order.total_price }}</p>
-
-<h3>Items:</h3>
-<ul>
+<div class="bg-gray-50 rounded-lg shadow-md p-8 sm:p-12 border border-gray-300">
+    <h2 class="text-lg sm:text-xl font-semibold text-gray-700 mb-2">Order Successful!</h2>
+    <p class="text-gray-500 mb-4">Your order ID is {{ order.id }}.</p>
+    <p class="text-gray-500 mb-2">Total: {{ order.total_price }}</p>
+     <h3 class="flex-1 font-semibold">Items:</h3>
+    <ul class="inline-block py-3 px-6 rounded-lg text-center">
     {% for item in order.items.all %}
         <li>{{ item.product.product_name }} - {{ item.quantity }} × {{ item.price }} = {{ item.total_price }}</li>
     {% endfor %}
-</ul>
+  </ul>
+</div>
+
 
 {% endblock %}
-
-
