--- a/backend/gurugasspoint/templates/customers/createprofile.html
+++ b/backend/gurugasspoint/templates/customers/createprofile.html
@@ -4,8 +4,8 @@
     <h1>Create Your Profile Here</h1>
     {% csrf_token %}
     {{form}}
-    <button type="submit" class="text-sm color-white-400">Save </button>
-    <button></button>
-    
+    <button type="submit" class="bg-blue-700 hover:bg-blue-800 text-white rounded-lg px-4 py-2">
+        Submit </button>
+     
 </form>
 {% endblock %}
