--- a/backend/gurugasspoint/templates/customers/login.html
+++ b/backend/gurugasspoint/templates/customers/login.html
@@ -1,18 +1,22 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<form action="" method="post" autocomplete="off">
+<div class="bg-gray-200 px-4 py-8 flex items-center flex-col shadow-md max-w-md mx-auto rounded-lg gap-4">
+    <form action="" method="post" autocomplete="off" class="px-4 py-8 mb-2">
     {% csrf_token %}
-    <h1>LOGIN FORM</h1>
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username" required>
+    <h1 class="text-xl font-semibold text-gray-700 mb-4 gap-4">LOGIN FORM</h1>
+    <input class="border border-gray-300 rounded px-4 py-2 mb-2" 
+       type="text" name="username" placeholder="Username" id="username" required>
     <br>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+    <input class="border border-gray-300 rounded px-4 py-2 mb-2" 
+       type="password" name="password" placeholder ="Password" id="password" required>
     <br>
-    <button type="submit">Login</button>
+    <button class="bg-blue-600 hover:bg-blue-700 text-white rounded-lg px-4 py-2" 
+      type="submit">Login</button>
 
     {% if msg %}
     <p style="color:red;">{{ msg }}</p>
     {% endif %}
 </form>
+<p>Don't have an account? <a href="{% url 'profile_create'%}" class="text-blue-600 hover:underline">Register here</a></p>
+</div>
 {% endblock %}
