--- a/backend/gurugasspoint/templates/customers/createprofile.html
+++ b/backend/gurugasspoint/templates/customers/createprofile.html
@@ -1,11 +1,14 @@
 {% extends 'customers/base.html' %}
 {% block content %}
-<form action="" method="post" enctype="multipart/form-data" autocomplete="off">
-    <h1>Create Your Profile Here</h1>
+<div class="bg-gray-200 px-4 py-6 flex items-center flex-col shadow-md max-w-md mx-auto rounded-lg">
+    <form action="" method="post" enctype="multipart/form-data" autocomplete="off">
+    <h1 >Create Your Profile Here</h1>
     {% csrf_token %}
     {{form}}
     <button type="submit" class="bg-blue-700 hover:bg-blue-800 text-white rounded-lg px-4 py-2">
         Submit </button>
      
 </form>
+</div>
+
 {% endblock %}
